[Added] Actualizar env example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 PORT=3000
+JWT_SECRET=secretKey
+OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
 STORAGE_PATH=./public_storage
 TOTAL_STORAGE_GB=10
 ADMIN_EMAIL=admin@example.com
+
 USERS="ALICE,INVITADO,ADMIN"
 USER_ALICE=password
 USER_INVITADO=guest
